# CMake-test

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
A/: index.cpp  index.h  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
